--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vant/weapp": "^1.3.2",
+    "axios": "^0.19.2",
     "cors": "^2.8.5",
     "element-ui": "^2.13.2",
     "mongoose": "^5.9.20",
